# doozy_robotics

./: LICENSE  README.md
Arduino/Ultrasonic_sensor/max_hrlv1043_test_01/: max_hrlv1043_test_01.ino
Arduino/forklift_align_01/: forklift_align_01.ino
Arduino/latch_arm1_01/: latch_arm1_01.ino
Arduino/latch_arm2_01/: latch_arm2_01.ino
Arduino/max_hrlv1043_test_01/: max_hrlv1043_test_01.ino
Arduino/max_sonar_aligner_01/: max_sonar_aligner_01.ino
Arduino/tug_arm_centering_02/: tug_arm_centering_02.ino
Arduino/tug_bot_test_sketch_01/: tug_bot_test_sketch_01.ino
Arduino/tug_bot_test_sketch_02/: tug_bot_test_sketch_02.ino
Arduino/tug_robot_latch_actuator_01/: tug_robot_latch_actuator_01.ino
doozy_ws/: dolly_test_01.pgm  dolly_test_01.yaml  warehouse_01.yaml  warehouse_01.yaml.pgm
doozy_ws/RVIZ/: doozy_tugbot_config_1.rviz
doozy_ws/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
doozy_ws/log/: latest_build
doozy_ws/logs/rb1_base_control/: build.cmake.000.log.stderr
doozy_ws/logs/rb1_base_localization/: build.cmake.000.log.stderr
doozy_ws/logs/rb1_base_navigation/: build.cmake.000.log.stderr
doozy_ws/logs/rb1_base_pad/: build.cmake.000.log.stderr
doozy_ws/logs/scripts/: build.cmake.000.log.stderr
doozy_ws/src/amr_bot/: CMakeLists.txt  package.xml
doozy_ws/src/dolly_action_msgs/: CMakeLists.txt
doozy_ws/src/dolly_action_msgs/action/: amrDock.action
doozy_ws/src/fork_bot/: CMakeLists.txt
doozy_ws/src/obstacle_detect/: CMakeLists.txt
doozy_ws/src/pallet_bot/: CMakeLists.txt
doozy_ws/src/pallet_truck_ultrasonic/: CMakeLists.txt
doozy_ws/worlds/: warehouse.world
doozy_ws_2/: README.md
doozy_ws_2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
doozy_ws_2/log/: latest_build  latest_list
doozy_ws_2/src/2_t_dolly_logistics_driver/: package.xml  setup.cfg  setup.py
doozy_ws_2/src/2_t_dolly_logistics_driver/2_t_dolly_logistics_driver/: dock_to_dolly_02.py  docking_system_test_01.py  gui_02.py  latch_unlatch_01.py  latch_unlatch_02.py  latch_unlatch_03.py  nav_to_dolly_01.py  nav_to_dolly_02.py
doozy_ws_2/src/2_t_dolly_logistics_driver/launch/: tug_navigation.launch.xml
doozy_ws_2/worlds /: map_01.yaml.pgm  map_01.yaml.yaml  test_1_dqn_01
doozy_ws_ros2/install/: local_setup.sh  setup.sh  spawn_shell.bash
doozy_ws_ros2/log/: latest_build
(+1927 files in other folders)
