<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>2_t_dolly_logistics_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="avinaash.mani@gmail.com">avinaash</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
